# dirg

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  area.cpp  area.h  editor.cpp  editor.h  editor.ui  geometry.cpp  geometry.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.ci/: build_check.sh  tidy_check.sh
.github/workflows/: ci.yml
backend/geometry/: CMakeLists.txt  edge.cpp  edge.h  geometry.cpp  geometry.h  polygon.cpp  polygon.h  vertex.cpp  vertex.h
cmake/: clang_format.cmake  clang_tidy.cmake
frontend/: CMakeLists.txt
frontend/area/: area.cpp  area.h
frontend/editor/: editor.cpp  editor.h  editor.ui
frontend/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
